@@ -38,7 +38,7 @@ public class MemberAuthService {
 
     private static final String AUTHORITIES_KEY = "auth";
     private static final String TYPE = "Bearer ";
-    private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 60 * 30;            // 30분
+    private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000L * 60 * 30;            // 30분
 
     @Transactional
     public JoinVo join(JoinDto joinDto){
@@ -84,7 +84,7 @@ public class MemberAuthService {
         }
 
         ValueOperations<String, Object> ops = redisTemplate.opsForValue();
-        String originAccessToken = ops.get(refreshToken).toString();
+        String originAccessToken = Optional.ofNullable(ops.get(refreshToken)).orElse("").toString();
         Claims claims = tokenProvider.parseClaims(originAccessToken);
 
         String sub = claims.get("sub").toString();
@@ -97,7 +97,7 @@ public class MemberAuthService {
 
         Role role = Role.valueOf(member.getRole().NAME);
         String[] roleSplitList = role.ROLE_LIST.split(",");
-        List<String> trimRoleList = Arrays.stream(roleSplitList).map(r -> String.format("ROLE_%s", r.trim())).collect(Collectors.toList());
+        List<String> trimRoleList = Arrays.stream(roleSplitList).map(r -> String.format("ROLE_%s", r.trim())).toList();
         String roleList = trimRoleList.toString().replace("[", "").replace("]", "").replaceAll(" ", "");
 
         String accessToken = tokenProvider.createAccessToken(String.valueOf(member.getId()), roleList, accessTokenExpired);
